Disable direct access to API when multitenancy is enabled (#1536)
* disable access when no tenant info is resolved

* fix compilation error

* fix disabled apis test

* update test

* fix kafka quarkus tests

* add missing kafka bootstrapservers

* workaround add bootstrap servers

Co-authored-by: Eric Wittmann <eric.wittmann@gmail.com>